slight css fix for campscapes align interview title bar with flyoutTabs
Former-commit-id: b3a3bab1b3e8271378988f5df61614e2a1f06dc3

--- a/app/assets/stylesheets/responsive/_structure.scss
+++ b/app/assets/stylesheets/responsive/_structure.scss
@@ -254,7 +254,7 @@ header.site-header {
   // -webkit-transition: max-height 1s;
   // transition: max-height 1s;
   @include screen-m {
-    padding: 30px 5%;
+    padding: 30px 5% 25px;
   }
 }
 .video-title-container {
